--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Arrangements for Solo Piano
-baseurl: solopiano
+baseurl: arrpiano
 excerpt_separator: "\n\n\n"
 
 permalink: /:year/:month/:day/:title
